<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="wnukjedrzej.rst_zadanie_rekrutacyjne.GameActivity"
    android:background="@drawable/table">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4b000000">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cards_remain_text"
                android:id="@+id/textViewCardsRemained"
                android:textColor="#ad862c"
                android:textAlignment="viewStart"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/decks_id_text"
                android:id="@+id/textViewDeckID"
                android:textAlignment="viewEnd"
                android:textColor="#ad862c"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cards_set_text"
            android:id="@+id/textViewCardsSet"
            android:textColor="#ad862c" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="157dp"
            android:id="@+id/imageView1"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="157dp"
            android:id="@+id/imageView2"
            android:layout_alignTop="@+id/imageView1"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="157dp"
            android:id="@+id/imageView3"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="157dp"
            android:id="@+id/imageView4"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="50dp" />

        <ImageView
            android:layout_width="113dp"
            android:layout_height="157dp"
            android:id="@+id/imageView5"
            android:layout_alignTop="@+id/imageView4"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50px"
            android:foreground="#fa9797f9" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_card_button_text"
            android:id="@+id/buttonChangeCard"
            android:textColor="#ad862c"
            android:background="#4b000000"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="changeOneCard" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shuffle_cars_button_text"
            android:id="@+id/buttonShuffle"
            android:textColor="#ad862c"
            android:background="#4b000000"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="shuffleDeck" />

    </LinearLayout>

</LinearLayout>
